--- a/app.css
+++ b/app.css
@@ -71,7 +71,7 @@ html, body {
   border-bottom: solid;
 }
 
-/*Logo styling*/
+/*Logo styling  Disappear with Article lookup?*/
 .logo {
 height: 7em;
 width: 7em;
@@ -113,10 +113,11 @@ button:hover {
 
 /*Article Styling **Appears with Javascript*/
 .article-generator {
-  visibility: visible;
+  visibility: hidden;
 }
 
 .article {
+  background-image: url('http://www.photos-public-domain.com/wp-content/uploads/2012/05/ivory-off-white-paper-texture.jpg');
   background-color: #B3D2F8;
   padding: 5px;
   margin: 5px;
