--- a/app.css
+++ b/app.css
@@ -112,12 +112,12 @@ button:hover {
 }*/
 
 /*Article Styling **Appears with Javascript*/
-.article-generator {
+/*.article-generator {
   visibility: hidden;
-}
+}*/
 
 .article {
-  background-image: url('http://www.photos-public-domain.com/wp-content/uploads/2012/05/ivory-off-white-paper-texture.jpg');
+  /*background-image: url('http://www.photos-public-domain.com/wp-content/uploads/2012/05/ivory-off-white-paper-texture.jpg');*/
   background-color: #B3D2F8;
   padding: 5px;
   margin: 5px;
@@ -143,6 +143,7 @@ button:hover {
   border-color:#1675e9;
 }
 
+
 /*Footer and link styling*/
 
 footer {
@@ -155,6 +156,16 @@ footer {
 .link-unstyled {
   color: #616262;
   text-decoration: none;
+}
+
+.link-unstyled-article {
+  text-decoration: none;
+  color: black;
+}
+
+.link-unstyled-article:hover, .link-unstyled-article:focus {
+    color: black;
+    text-decoration: none;
 }
 
 .link-unstyled:hover, .link-unstyled:focus {
